--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css"/>  
-   
-    <title>Redux Sandbox</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css"/>     
+    <title>Redux Sandbox</title>   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="jumbotron">
-        <h1>Redux Sandbox</h1>
-        <h2>Counter</h2>
-        <h3 id="counter">0</h3>
-        <button id="dec" type="button" class="btn btn-primary btn-lg">DEC</button>
-        <button id="inc" type="button" class="btn btn-primary btn-lg">INC</button>
-        <button id="mult" type="button" class="btn btn-primary btn-lg">MULT</button>
-        <button id="div" type="button" class="btn btn-primary btn-lg">DIV</button>
-    </div>     
+    <div id="root"></div>     
   </body>
 </html>
